--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.7.*",
+        "laravel/scout": "^6.1",
         "laravel/tinker": "^1.0",
-        "marvinlabs/laravel-html-bootstrap-4": "^1.6"
+        "laravelcollective/html": "^5.7",
+        "marvinlabs/laravel-html-bootstrap-4": "^1.6",
+        "yajra/laravel-datatables-oracle": "^8.13"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
